# rust-api-auth

./: .env  Cargo.toml
src/: db_connection.rs  main.rs
src/controller/: auth_controller.rs  user_controller.rs
src/dtos/: login_dto.rs  mod.rs  register_dto.rs
src/middlewares/: auth_middleware.rs
src/models/: user.rs
src/routes/: app_routes.rs  auth_routes.rs  mod.rs  user_routes.rs
src/services/: auth_service.rs  user_service.rs
