[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bcrypt = "0.15.1"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls","postgres","chrono","uuid" ] }
validator = { version = "0.17.0", features = ["derive"] }

